--- a/pub/test/573.html
+++ b/pub/test/573.html
@@ -28,8 +28,10 @@
     </section>
 
     <script>
-      var head = document.head;
-      head.appendChild(head.removeChild(document.getElementById('green')));
+      var elmHead = document.head;
+      var cssGreen = document.getElementById('green');
+      elmHead.appendChild(cssGreen.cloneNode());
+      elmHead.removeChild(cssGreen);
     </script>
   </body>
 </html>
