--- a/404.html
+++ b/404.html
@@ -80,7 +80,7 @@
   </head>
   <body>
     <div class="header" role="banner">
-      <a id="logo" href="/"><img src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M-16-16v544h544v-544h-544zm32%2032h480v480h-480v-480zm112%20112v16h32v224h-32v16h128v-16h-32v-112h112v112h-32v16h80v-16h-32v-224h32v-16h-80v16h32v96h-112v-96h32v-16h-128zm48%2016h32v224h-32v-224z%22%20fill%3D%22%2318b%22%2F%3E%3C%2Fsvg%3E"></a>
+      <a id="logo" href="/"><img src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Crect%20width%3D%22544%22%20height%3D%22544%22%20x%3D%22-16%22%20y%3D%22-16%22%20ry%3D%220%22%20fill%3D%22%235bacd0%22%2F%3E%3Cpath%20d%3D%22M128%20128v16h32v224h-32v16h128v-16h-32v-112h112v112h-32v16h80v-16h-32v-224h32v-16h-80v16h32v96h-112v-96h32v-16zm48%2016h32v224h-32z%22%20fill%3D%22%23fcf9f0%22%2F%3E%3C%2Fsvg%3E"></a>
     </div>
 
     <div class="main" role="main">
