--- a/pub/test/576.html
+++ b/pub/test/576.html
@@ -15,6 +15,10 @@
         white-space: nowrap;
       }
 
+      .test li:last-child {
+        padding-right: 2rem;
+      }
+
       .kern {
         -webkit-font-feature-settings: "kern" 1;
         -ms-font-feature-settings: "kern" 1;
