--- a/404.html
+++ b/404.html
@@ -8,25 +8,24 @@
 
     <style>
       html {
-        position: relative;
+        display: table;
         width: 100%;
         height: 100%;
       }
 
       body {
-        margin: auto;
-        display: table;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        max-width: 36em;
-        height: auto;
+        margin: 0;
+        display: table-cell;
+        vertical-align: middle;
         line-height: 1.618;
         color: #3C3330;
         background-color: #FCF9F0;
         font-family: "Helvetica Neue", "Calibri", sans-serif;
+      }
+
+      .wrapper {
+        margin: 0 auto;
+        max-width: 36em;
       }
 
       #logo {
@@ -79,24 +78,26 @@
     </style>
   </head>
   <body>
-    <div class="header">
-      <a id="logo" href="/"><img src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Crect%20width%3D%22544%22%20height%3D%22544%22%20x%3D%22-16%22%20y%3D%22-16%22%20ry%3D%220%22%20fill%3D%22%235bacd0%22%2F%3E%3Cpath%20d%3D%22M128%20128v16h32v224h-32v16h128v-16h-32v-112h112v112h-32v16h80v-16h-32v-224h32v-16h-80v16h32v96h-112v-96h32v-16zm48%2016h32v224h-32z%22%20fill%3D%22%23fcf9f0%22%2F%3E%3C%2Fsvg%3E"></a>
-    </div>
-
-    <div class="main">
-      <div class="section">
-        <h1><strong>404</strong>. Error. Probably.</h1>
-
-        <p>お探しのページは見つかりませんでした。以下の検索フォームより、このウェブサイト内を検索してみてください。</p>
+    <div class="wrapper">
+      <div class="header">
+        <a id="logo" href="/"><img src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Crect%20width%3D%22544%22%20height%3D%22544%22%20x%3D%22-16%22%20y%3D%22-16%22%20ry%3D%220%22%20fill%3D%22%235bacd0%22%2F%3E%3Cpath%20d%3D%22M128%20128v16h32v224h-32v16h128v-16h-32v-112h112v112h-32v16h80v-16h-32v-224h32v-16h-80v16h32v96h-112v-96h32v-16zm48%2016h32v224h-32z%22%20fill%3D%22%23fcf9f0%22%2F%3E%3C%2Fsvg%3E"></a>
       </div>
 
-      <div class="section">
-        <form action="http://www.google.com/cse">
-          <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
-          <input type="hidden" name="ie" value="UTF-8">
-          <input type="search" name="q" size="32">
-          <input type="submit" name="sa" value="検索">
-        </form>
+      <div class="main">
+        <div class="section">
+          <h1><strong>404</strong>. Error. Probably.</h1>
+
+          <p>お探しのページは見つかりませんでした。以下の検索フォームより、このウェブサイト内を検索してみてください。</p>
+        </div>
+
+        <div class="section">
+          <form action="http://www.google.com/cse">
+            <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
+            <input type="hidden" name="ie" value="UTF-8">
+            <input type="search" name="q" size="32">
+            <input type="submit" name="sa" value="検索">
+          </form>
+        </div>
       </div>
     </div>
   </body>
