--- a/pub/test/581.html
+++ b/pub/test/581.html
@@ -4,13 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
-    <title>img border and border-radius</title>
+    <title>img padding and border-radius on IE11</title>
 
     <link rel="stylesheet" href="http://hail2u.net/styles/natural.min.css">
     <style>
       .test img {
-	border: 1em solid #f0f;
 	border-radius: 51%;
+      }
+
+      .padding img {
+	padding: 1em;
+	background-color: #f0f;
+      }
+
+      .border img {
+	border: 1em solid #f0f;
       }
     </style>
 
@@ -18,10 +26,20 @@
   </head>
   <body>
     <header>
-      <h1>img border and border-radius</h1>
+      <h1>img padding and border-radius on IE11</h1>
+
+      <p>IE11での<code>padding</code>と<code>border-radius</code>プロパティーで画像が丸くならない。IE12開発版でも同様。</p>
     </header>
 
-    <section class="test">
+    <section class="test padding">
+      <h1>pading</h1>
+
+      <img src="http://placeimg.com/320/320/any">
+    </section>
+
+    <section class="test border">
+      <h1>border</h1>
+
       <img src="http://placeimg.com/320/320/any">
     </section>
   </body>
