--- a/404.html
+++ b/404.html
@@ -8,15 +8,15 @@
 
     <style>
       html {
-        display: table;
         width: 100%;
         height: 100%;
       }
 
       body {
         margin: 0;
-        display: table-cell;
-        vertical-align: middle;
+        position: relative;
+        width: 100%;
+        height: 100%;
         line-height: 1.618;
         color: #3C3330;
         background-color: #FCF9F0;
@@ -24,7 +24,10 @@
       }
 
       .wrapper {
-        margin: 0 auto;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         max-width: 36em;
       }
 
@@ -40,62 +43,60 @@
         vertical-align: bottom;
       }
 
-      h1 {
+      .title {
         margin: 3em 0 0 0;
         font-weight: normal;
         font-size: 100%;
       }
 
-      p {
+      .description {
         margin: 2em 0 0 0;
       }
 
-      form {
+      .searchbox {
         margin: 1em 0 0 0;
       }
 
-      input {
+      .input {
+        padding: 0 0.25em;
         box-sizing: border-box;
         -moz-box-sizing: border-box;
+        width: 66.667%;
         height: 2em;
         font-family: inherit;
         font-size: 100%;
       }
 
-      input[type="search"] {
-        padding: 0 0.25em;
-        width: 66.667%;
-      }
-
-      input[type="submit"] {
+      .button {
         padding: 0.125em 1em;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
         vertical-align: bottom;
-      }
-
-      .footer {
-        line-height: 1;
+        height: 2em;
+        font-family: inherit;
+        font-size: 100%;
       }
     </style>
   </head>
   <body>
     <div class="wrapper">
       <div class="header">
-        <a id="logo" href="/"><img src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Crect%20width%3D%22544%22%20height%3D%22544%22%20x%3D%22-16%22%20y%3D%22-16%22%20ry%3D%220%22%20fill%3D%22%235bacd0%22%2F%3E%3Cpath%20d%3D%22M128%20128v16h32v224h-32v16h128v-16h-32v-112h112v112h-32v16h80v-16h-32v-224h32v-16h-80v16h32v96h-112v-96h32v-16zm48%2016h32v224h-32z%22%20fill%3D%22%23fcf9f0%22%2F%3E%3C%2Fsvg%3E"></a>
+        <a id="logo" href="/"><img src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20fill%3D%22%235bacd0%22%20d%3D%22M-8-8h528v528H-8z%22%2F%3E%3Cpath%20d%3D%22M160%20128v256h16V128zm32%200v256h16V128zm112%200v96h-80v16h96V128zm32%200v256h16V128zM224%20256v16h80v112h16V256z%22%20fill%3D%22%23fcf9f0%22%2F%3E%3C%2Fsvg%3E"></a>
       </div>
 
       <div class="main">
         <div class="section">
-          <h1><strong>404</strong>. Error. Probably.</h1>
+          <h1 class="title"><strong>404</strong>. Error. Probably.</h1>
 
-          <p>お探しのページは見つかりませんでした。以下の検索フォームより、このウェブサイト内を検索してみてください。</p>
+          <p class="description">お探しのページは見つかりませんでした。以下の検索フォームより、このウェブサイト内を検索してみてください。</p>
         </div>
 
         <div class="section">
-          <form action="http://www.google.com/cse">
+          <form class="searchbox" action="http://www.google.com/cse">
             <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
             <input type="hidden" name="ie" value="UTF-8">
-            <input type="search" name="q" size="32">
-            <input type="submit" name="sa" value="検索">
+            <input class="input" type="search" name="q" size="32">
+            <input class="button" type="submit" name="sa" value="検索">
           </form>
         </div>
       </div>
