Stick 404 content left on large screen

--- a/404.html
+++ b/404.html
@@ -28,7 +28,14 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        width: 90%;
         max-width: 36em;
+      }
+
+      @media (min-width: 60em) {
+        .wrapper {
+          left: 30em;
+        }
       }
 
       #logo {
@@ -54,7 +61,7 @@
       }
 
       .searchbox {
-        margin: 1em 0 0 0;
+        margin: 2em 0 0 0;
       }
 
       .input {
