--- a/pub/test/596.html
+++ b/pub/test/596.html
@@ -37,15 +37,15 @@
         height: 6%;
         content: "";
         background-color: #333;
-        transition: all 0.3s ease-in-out;
+        transition: all 0.8s ease-in-out;
       }
 
       .sandwich::before {
-        top: 27%;
+        top: 30%;
       }
 
       .sandwich::after {
-        bottom: 27%;
+        top: 64%;
       }
 
       .sandwich:hover {
@@ -54,21 +54,19 @@
 
       .sandwich:hover::before,
       .sandwich:hover::after {
-        width: 67%;
-        -webkit-transform-origin: left center;
-        transform-origin: left center;
+        top: 47%;
+        left: 15%;
+        width: 70%;
       }
 
       .sandwich:hover::before {
-        top: 24%;
-        -webkit-transform: rotate(45deg);
-        transform: rotate(45deg);
+        -webkit-transform: rotate(315deg);
+        transform: rotate(315deg);
       }
 
       .sandwich:hover::after {
-        bottom: 24%;
-        -webkit-transform: rotate(-45deg);
-        transform: rotate(-45deg);
+        -webkit-transform: rotate(-315deg);
+        transform: rotate(-315deg);
       }
     </style>
   </head>
