--- a/pub/test/595.html
+++ b/pub/test/595.html
@@ -9,30 +9,35 @@
     <link rel="stylesheet" href="http://hail2u.net/styles/natural.min.css">
     <style>
       .test {
-        padding-right: 48px;
         max-width: 480px;
-        overflow: hidden;
-        background-image: linear-gradient(to right, #9cf 0, #f9c 100%);
-        background-clip: content-box;
       }
 
-      p {
-        width: 640px;
+      .test p {
+        padding-right: 120px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
+
+      .test p span {
         background-image: linear-gradient(to right, #9cf 0, #f9c 100%);
         background-repeat: no-repeat;
-        background-size: 100% 100%;
+        background-size: 100% 1px;
+        background-position: 0 1.1rem;
       }
     </style>
   </head>
   <body>
     <header>
       <h1>Overflowed Element's Background Image</h1>
+
+      <p><code>overflow: hidden</code>を指定した要素の背景が、親要素の<code>padding</code>エリアまで描画されてしまう。</p>
     </header>
 
     <section class="test">
-      <h1>max-width: 480px</h1>
+      <h1>Normal</h1>
 
-      <p>width: 640px</p>
+      <p><span>Dolor sit amet, consectetur adipiscing elit. Cras fringilla aliquet tortor sed dignissim. Etiam euismod vulputate quam, ut luctus justo. Proin facilisis bibendum enim in auctor. Proin eu quam imperdiet, lobortis nulla ut, consectetur massa. Nam pharetra vitae dui et sodales. Nam lacinia purus ac luctus finibus. Quisque tincidunt scelerisque ex. Nunc in posuere lectus, tristique pretium lectus. Nunc tempor iaculis nunc vel porta. Nam at lorem vel magna lobortis fermentum.</span></p>
     </section>
   </body>
 </html>
