--- a/pub/test/595.html
+++ b/pub/test/595.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
-    <title>Overflowed Element's Background Image</title>
+    <title>Overflowed Element's Background</title>
 
     <link rel="stylesheet" href="http://hail2u.net/styles/natural.min.css">
     <style>
@@ -13,29 +13,39 @@
       }
 
       .test p {
-        padding-right: 120px;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
       }
 
       .test p span {
-        background-image: linear-gradient(to right, #9cf 0, #f9c 100%);
+        background-color: #def;
+        background-image: linear-gradient(#9cf 0, #9cf 100%);
         background-repeat: no-repeat;
         background-size: 100% 1px;
         background-position: 0 1.1rem;
+      }
+
+      .padding p {
+        padding-right: 120px;
       }
     </style>
   </head>
   <body>
     <header>
-      <h1>Overflowed Element's Background Image</h1>
+      <h1>Overflowed Element's Background</h1>
 
-      <p><code>overflow: hidden</code>を指定した要素の背景が、親要素の<code>padding</code>エリアまで描画されてしまう。</p>
+      <p><code>overflow: hidden</code>を指定した要素の背景は親要素の<code>padding</code>エリアまで描画される。</p>
     </header>
 
     <section class="test">
-      <h1>Normal</h1>
+      <h1>paddingなし</h1>
+
+      <p><span>Dolor sit amet, consectetur adipiscing elit. Cras fringilla aliquet tortor sed dignissim. Etiam euismod vulputate quam, ut luctus justo. Proin facilisis bibendum enim in auctor. Proin eu quam imperdiet, lobortis nulla ut, consectetur massa. Nam pharetra vitae dui et sodales. Nam lacinia purus ac luctus finibus. Quisque tincidunt scelerisque ex. Nunc in posuere lectus, tristique pretium lectus. Nunc tempor iaculis nunc vel porta. Nam at lorem vel magna lobortis fermentum.</span></p>
+    </section>
+
+    <section class="test padding">
+      <h1>paddingあり</h1>
 
       <p><span>Dolor sit amet, consectetur adipiscing elit. Cras fringilla aliquet tortor sed dignissim. Etiam euismod vulputate quam, ut luctus justo. Proin facilisis bibendum enim in auctor. Proin eu quam imperdiet, lobortis nulla ut, consectetur massa. Nam pharetra vitae dui et sodales. Nam lacinia purus ac luctus finibus. Quisque tincidunt scelerisque ex. Nunc in posuere lectus, tristique pretium lectus. Nunc tempor iaculis nunc vel porta. Nam at lorem vel magna lobortis fermentum.</span></p>
     </section>
