Refer `documents/css/documents.css`

--- a/documents/cutting-down-on-vendor-prefixes.html
+++ b/documents/cutting-down-on-vendor-prefixes.html
@@ -6,7 +6,7 @@
 
     <title>ベンダー拡張プリフィックスヲ削減セヨ</title>
 
-    <link rel="stylesheet" href="./css/documents.min.css">
+    <link rel="stylesheet" href="./css/documents.css">
   </head>
   <body>
 <h1>ベンダー拡張プリフィックスヲ削減セヨ</h1>
