--- a/documents/favicon-cheat-sheet-ja.html
+++ b/documents/favicon-cheat-sheet-ja.html
@@ -6,7 +6,7 @@
 
     <title>ファビコン・カンニング・ペーパー</title>
 
-    <link rel="stylesheet" type="text/css" href="./css/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/documents.css">
   </head>
   <body>
 <h1>ファビコン・カンニング・ペーパー</h1>
