--- a/documents/learn-you-a-flexbox-for-great-good.html
+++ b/documents/learn-you-a-flexbox-for-great-good.html
@@ -6,7 +6,7 @@
 
     <title>Flexbox、おもしろいですよ？</title>
 
-    <link rel="stylesheet" href="./css/documents.min.css">
+    <link rel="stylesheet" href="./css/documents.css">
   </head>
   <body>
 <h1>Flexbox、おもしろいですよ？</h1>
