--- a/documents/translation-is-easy-really.html
+++ b/documents/translation-is-easy-really.html
@@ -5,7 +5,7 @@
 
     <title>翻訳は簡単だよ、本当に</title>
 
-    <link rel="stylesheet" type="text/css" href="./css/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/documents.css">
   </head>
   <body>
 <h1>翻訳は簡単だよ、本当に</h1>
