--- a/documents/version-control-for-designers.html
+++ b/documents/version-control-for-designers.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width">
 <title>Version Control for Designers</title>
-<link rel="stylesheet" type="text/css" href="./css/documents.min.css">
+<link rel="stylesheet" type="text/css" href="./css/documents.css">
 </head>
 <body>
 <div class="note">
