--- a/documents/what-should-you-say-when-your-app-goes-down.html
+++ b/documents/what-should-you-say-when-your-app-goes-down.html
@@ -6,7 +6,7 @@
 
     <title>あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？</title>
 
-    <link rel="stylesheet" href="./css/documents.min.css">
+    <link rel="stylesheet" href="./css/documents.css">
   </head>
   <body>
     <header>
