--- a/documents/ala-getting-started-with-sass.html
+++ b/documents/ala-getting-started-with-sass.html
@@ -6,7 +6,7 @@
 
     <title>Sassで行こう！</title>
 
-    <link rel="stylesheet" type="text/css" href="./css/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/documents.css">
   </head>
   <body>
 <h1>Sassで行こう！</h1>
