--- a/documents/ala-whitespace.html
+++ b/documents/ala-whitespace.html
@@ -5,7 +5,7 @@
 
     <title>余白の美</title>
 
-    <link rel="stylesheet" type="text/css" href="./css/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/documents.css">
     <style>
       .clipart {
         float: right;
