--- a/documents/bulletproof-icon-fonts.html
+++ b/documents/bulletproof-icon-fonts.html
@@ -6,7 +6,7 @@
 
     <title>安全でアクセシブルなアイコン・フォント</title>
 
-    <link rel="stylesheet" href="./css/documents.min.css">
+    <link rel="stylesheet" href="./css/documents.css">
   </head>
   <body>
 <h1>安全でアクセシブルなアイコン・フォント</h1>
