--- a/documents/cairs.html
+++ b/documents/cairs.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width">
 <title>Complex @import rules</title>
-<link rel="stylesheet" type="text/css" href="./css/documents.min.css">
+<link rel="stylesheet" type="text/css" href="./css/documents.css">
 </head>
 <body>
 <h1>Complex @import rules</h1>
