--- a/documents/css-postprocessor-era.html
+++ b/documents/css-postprocessor-era.html
@@ -6,7 +6,7 @@
 
     <title>CSSポストプロセッサー時代の到来</title>
 
-    <link rel="stylesheet" href="./css/documents.min.css">
+    <link rel="stylesheet" href="./css/documents.css">
   </head>
   <body>
     <h1>CSSポストプロセッサー時代の到来</h1>
