--- a/documents/css2pt.html
+++ b/documents/css2pt.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width">
 <title>CSS2 property table</title>
-<link rel="stylesheet" type="text/css" href="./css/documents.min.css">
+<link rel="stylesheet" type="text/css" href="./css/documents.css">
 </head>
 <body>
 <h1>CSS2 property table</h1>
