--- a/documents/diveintohtml5-semantics.html
+++ b/documents/diveintohtml5-semantics.html
@@ -5,7 +5,7 @@
 
     <title>結局どうすればいいの？ - Dive Into HTML5</title>
 
-    <link rel="stylesheet" type="text/css" href="./css/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/documents.css">
 
     <style type="text/css">
       .a {
