--- a/documents/entities.html
+++ b/documents/entities.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width">
 <title>Character entity references in HTML 4</title>
-<link rel="stylesheet" type="text/css" href="./css/documents.min.css">
+<link rel="stylesheet" type="text/css" href="./css/documents.css">
 <style>
 .unicode {
   font-family: "Lucida Sans Unicode", "Arial Unicode MS", sans-serif;
