--- a/documents/html-img-alt.html
+++ b/documents/html-img-alt.html
@@ -5,7 +5,7 @@
 
     <title>HTMLにおけるimg要素のalt属性</title>
 
-    <link rel="stylesheet" type="text/css" href="./css/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/documents.css">
 
     <style type="text/css">
       .a {
