--- a/documents/ps_sketchpbyp.html
+++ b/documents/ps_sketchpbyp.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width">
 <title>Sketch photo by pencil in Photoshop 7</title>
-<link rel="stylesheet" type="text/css" href="./css/documents.min.css">
+<link rel="stylesheet" type="text/css" href="./css/documents.css">
 </head>
 <body>
 <h1>Sketch photo by pencil in Photoshop 7</h1>
