--- a/documents/rss20notes.html
+++ b/documents/rss20notes.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width">
 <title>RSS 2.0 Notes</title>
-<link rel="stylesheet" type="text/css" href="./css/documents.min.css" />
+<link rel="stylesheet" type="text/css" href="./css/documents.css" />
 </head>
 <body>
 <h1>RSS 2.0 Notes</h1>
