--- a/documents/sass-guide-ja.html
+++ b/documents/sass-guide-ja.html
@@ -6,7 +6,7 @@
 
     <title>Sassの基本</title>
 
-    <link rel="stylesheet" href="./css/documents.min.css">
+    <link rel="stylesheet" href="./css/documents.css">
   </head>
   <body>
     <h1>Sassの基本</h1>
