--- a/documents/style-repository.html
+++ b/documents/style-repository.html
@@ -6,7 +6,7 @@
 
     <title>スタイル・リポジトリ</title>
 
-    <link rel="stylesheet" href="./css/documents.min.css">
+    <link rel="stylesheet" href="./css/documents.css">
   </head>
   <body>
 <h1>スタイル・リポジトリ</h1>
