--- a/documents/think-of-the-beginners.html
+++ b/documents/think-of-the-beginners.html
@@ -6,7 +6,7 @@
 
     <title>初心者のことを考えよう</title>
 
-    <link rel="stylesheet" href="./css/documents.min.css">
+    <link rel="stylesheet" href="./css/documents.css">
   </head>
   <body>
 <h1>初心者のことを考えよう</h1>
