--- a/documents/web-typography-best-practices.html
+++ b/documents/web-typography-best-practices.html
@@ -6,7 +6,7 @@
 
     <title>ウェブ・タイポグラフィーのベスト・プラクティス</title>
 
-    <link rel="stylesheet" href="./css/documents.min.css">
+    <link rel="stylesheet" href="./css/documents.css">
   </head>
   <body>
 <h1>ウェブ・タイポグラフィーのベスト・プラクティス</h1>
