--- a/pub/test/599.html
+++ b/pub/test/599.html
@@ -46,7 +46,7 @@
 
       <p>If this text is green, your browser can recognize <code>min-height: 56.25vw</code> feature.</p>
 
-      <p><code>56.25vw</code>でビューポートの9/16のサイズが計算できるので、これを<code>min-height</code>で判定すればFirefox 33と35以外ではうまく動かない。</p>
+      <p><code>56.25vw</code>でビューポートの9/16のサイズが計算できるので、これを<code>min-height</code>で判定して行う。Firefox 33 (多分20)以上でのみ動く。</p>
     </section>
   </body>
 </html>
