--- a/pub/test/600.html
+++ b/pub/test/600.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header>
-      <h1>Source Sans Pro</h1>
+      <h1>Source Sans Pro Extra Light</h1>
 
       <p>Source Sans ProのExtra Light (200)のGoogle Fonts版と最新版の比較。<code>38px</code>あたりでストロークの太さがずれ、Google Fonts版はExtra Lightっぽくなくなる。</p>
     </header>
