--- a/404.html
+++ b/404.html
@@ -2,111 +2,110 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta content="width=device-width" name="viewport">
 
     <title>404 Not Found</title>
 
     <style>
-      html {
-        width: 100%;
-        height: 100%;
-      }
-
       body {
-        margin: 0;
-        position: relative;
-        width: 100%;
-        height: 100%;
-        line-height: 1.618;
-        color: #3C3330;
         background-color: #FCF9F0;
+        color: #3C3330;
         font-family: "Helvetica Neue", "Calibri", sans-serif;
-      }
-
-      .wrapper {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 90%;
+        line-height: 1.618;
+        margin: 10% auto;
         max-width: 36em;
+        padding: 2em;
       }
 
-      @media (min-width: 60em) {
-        .wrapper {
-          left: 30em;
-        }
-      }
-
-      #logo {
+      .logo {
         display: inline-block;
-        width: 2em;
         height: 2em;
+        width: 2em;
       }
 
-      #logo img {
-        width: 100%;
+      .logo img {
         height: auto;
+        width: 100%;
         vertical-align: bottom;
       }
 
       .title {
-        margin: 3em 0 0 0;
-        font-weight: normal;
         font-size: 100%;
+        font-weight: normal;
+        margin: 3em 0 0;
       }
 
       .description {
-        margin: 2em 0 0 0;
+        margin: 2em 0 0;
       }
 
       .searchbox {
-        margin: 2em 0 0 0;
+        margin: 2em 0 0;
       }
 
       .input {
-        padding: 0 0.25em;
         box-sizing: border-box;
         -moz-box-sizing: border-box;
-        width: 66.667%;
-        height: 2em;
         font-family: inherit;
         font-size: 100%;
+        height: 2em;
+        padding: 0 0.25em;
+        width: 66.667%;
       }
 
       .button {
-        padding: 0.125em 1em;
         box-sizing: border-box;
         -moz-box-sizing: border-box;
-        vertical-align: bottom;
-        height: 2em;
         font-family: inherit;
         font-size: 100%;
+        height: 2em;
+        padding: 0.125em 1em;
+        vertical-align: bottom;
+      }
+
+      .byline {
+        margin: 3em 0 0;
+      }
+
+      .byline:before {
+        border-top: 0.125em solid #e1ddd5;
+        display: block;
+        content: '';
+        height: 0;
+        margin-bottom: 0.5em;
+        width: 2em;
+      }
+
+      .byline a {
+        color: #18b;
+        text-decoration: none;
       }
     </style>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="header">
-        <a id="logo" href="/"><img src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20fill%3D%22%235bacd0%22%20d%3D%22M-8-8h528v528H-8z%22%2F%3E%3Cpath%20d%3D%22M160%20128v256h16V128zm32%200v256h16V128zm112%200v96h-80v16h96V128zm32%200v256h16V128zM224%20256v16h80v112h16V256z%22%20fill%3D%22%23fcf9f0%22%2F%3E%3C%2Fsvg%3E"></a>
+    <div class="header">
+      <a class="logo" href="/"><img alt="Hail2u.net" src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M64%200v512h32V0zm64%200v512h32V0zm224%200v192H192v32h192V0zm64%200v512h32V0zM192%20256v32h160v224h32V256z%22%20fill%3D%22%235bacd0%22%2F%3E%3C%2Fsvg%3E"></a>
+    </div>
+
+    <div class="main">
+      <div class="section">
+        <h1 class="title"><strong>404</strong>. Error. Probably.</h1>
+
+        <p class="description">お探しのページは見つかりませんでした。以下の検索フォームより、このウェブサイト内を検索してみてください。</p>
       </div>
 
-      <div class="main">
-        <div class="section">
-          <h1 class="title"><strong>404</strong>. Error. Probably.</h1>
-
-          <p class="description">お探しのページは見つかりませんでした。以下の検索フォームより、このウェブサイト内を検索してみてください。</p>
-        </div>
-
-        <div class="section">
-          <form class="searchbox" action="http://www.google.com/cse">
-            <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
-            <input type="hidden" name="ie" value="UTF-8">
-            <input class="input" type="search" name="q" size="32">
-            <input class="button" type="submit" name="sa" value="検索">
-          </form>
-        </div>
+      <div class="section">
+        <form class="searchbox" action="http://www.google.com/cse">
+          <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
+          <input type="hidden" name="ie" value="UTF-8">
+          <input class="input" name="q" size="32" type="search">
+          <input class="button" name="sa" type="submit" value="検索">
+        </form>
       </div>
+    </div>
+
+    <div class="footer">
+      <p class="byline">Made by <a href="/about/">Kyo Nagashima</a>.</p>
     </div>
   </body>
 </html>
