--- a/404.html
+++ b/404.html
@@ -84,7 +84,7 @@
   </head>
   <body>
     <div class="header">
-      <h1 class="logo"><a href="/"><img alt="Hail2u.net" src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M64%200v512h32V0zm64%200v512h32V0zm224%200v192H192v32h192V0zm64%200v512h32V0zM192%20256v32h160v224h32V256z%22%20fill%3D%22%235bacd0%22%2F%3E%3C%2Fsvg%3E"></a></h1>
+      <h1 class="logo"><a href="/"><img alt="Hail2u.net" src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20fill%3D%22%235bacd0%22%20d%3D%22M-8-8h528v528H-8z%22%2F%3E%3Cpath%20d%3D%22M160%20128v256h16V128zm32%200v256h16V128zm112%200v96h-80v16h96V128zm32%200v256h16V128zM224%20256v16h80v112h16V256z%22%20fill%3D%22%23fcf9f0%22%2F%3E%3C%2Fsvg%3E"></a></h1>
     </div>
 
     <div class="main">
