Add published date

--- a/documents/216colors.html
+++ b/documents/216colors.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <h1>216 Cross Platform Colors</h1>
+    <p>Published on: 2004-03-04</p>
+
 <p>いわゆるWebセーフカラーと呼ばれる色の表です。</p>
 <table>
 	<tr>
