--- a/documents/about-rss.html
+++ b/documents/about-rss.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <h1>RSSについて</h1>
+    <p>Published: 2003-11-23</p>
+
 
 <div class="note">
   <p>この文書は2004年頃に書かれたもので、かなりの部分が時代遅れな記述となっています。更にいくらか誤解や嘘も含まれますが、もう修正できません。</p>
