--- a/documents/adding-meaning-to-your-http-error-pages.html
+++ b/documents/adding-meaning-to-your-http-error-pages.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <h1>HTTPエラーページに意味を持たせよう</h1>
+    <p>Published on: 2009-10-03</p>
+
 
 <p>Translation of: <a href="http://dev.opera.com/articles/view/adding-meaning-to-http-error-pages/">Adding meaning to your HTTP error pages!</a> by <a href="http://dev.opera.com/author/2929195">Stuart Colville</a></p>
 
