--- a/documents/ala-getting-started-with-sass.html
+++ b/documents/ala-getting-started-with-sass.html
@@ -13,6 +13,8 @@
 
 <p>Translation of: <a href="http://www.alistapart.com/articles/getting-started-with-sass/">Getting Started with Sass</a> - <a href="http://www.alistapart.com/">A List Apart</a></p>
 
+    <p>Published on: 2011-12-03</p>
+
 <figure class="image">
   <img src="http://www.alistapart.com/d/getting-started-with-sass/getting-started-with-sass.jpg" alt="Getting Started with Sass">
 </figure>
