--- a/documents/ala-whitespace.html
+++ b/documents/ala-whitespace.html
@@ -18,6 +18,8 @@
 
 <p>Translation of: <a href="http://www.alistapart.com/articles/whitespace/">Whitespace</a> - <a href="http://www.alistapart.com/">A List Apart</a></p>
 
+    <p>Published on: 2011-10-23</p>
+
 <figure class="clipart">
   <img src="http://www.alistapart.com/d/whitespace/whitespace.jpg" alt="Whitespace">
 </figure>
