--- a/documents/bulletproof-at-font-face-syntax.html
+++ b/documents/bulletproof-at-font-face-syntax.html
@@ -13,6 +13,8 @@
 
 <p>Translation of: <a href="http://paulirish.com/2009/bulletproof-font-face-implementation-syntax/">Bulletproof @font-face syntax</a></p>
 
+    <p>Published on: 2009-09-19</p>
+
 <p>最も優れた<code>@font-face</code>の定義方法を解説させて貰おう:</p>
 
 <pre><code class="language-css">@font-face {
