--- a/documents/bulletproof-icon-fonts.html
+++ b/documents/bulletproof-icon-fonts.html
@@ -13,6 +13,8 @@
 
 <p>Translation of: <a href="http://filamentgroup.com/lab/bulletproof_icon_fonts/">Bulletproof Accessible Icon Fonts</a> by <a href="http://filamentgroup.com/">Filament Group</a></p>
 
+    <p>Published on: 2014-02-07</p>
+
 <p>アイコン・フォントを利用する場合、あらゆるユーザーに適切にアイコンを提供しようとすると、かなり気をつける必要があります。そのフォントが読み込まれなかった時にどうなりますか？<code>@font-face</code>がまだサポートされていないブラウザーでは？どうすれば安全に(bulletproofに)アイコン・フォントを利用できるかをこれから解説したいと思います。</p>
 
 <p>効率的で機能的なウェブサイトを制作するという、この終わることのない探求において、ベクター形式のアイコンを提供する手段として、簡便であるフォントを利用することが何度も提案されてきました。対して私達は通常<a href="http://filamentgroup.com/lab/grunticon">ベクター形式のアイコンとしてSVG</a>を<a href="http://ianfeather.co.uk/ten-reasons-we-switched-from-an-icon-font-to-svg/">Ian Featherがブログ書いたような</a>理由から選んで(また、薦めて)おり、既にアイコン・フォントを利用しているチームと共同して制作する場合でも、時にはそうしてきました。そのような時のために、どうやればアイコン・フォントをあまねくアクセシブルな形で利用できるかの調査も行ってきました。</p>
