--- a/documents/cairs.html
+++ b/documents/cairs.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <h1>Complex @import rules</h1>
+    <p>Published on: 2004-02-27</p>
+
 <p>各ブラウザでサポート状況がマチマチな@importルールのサポート状況の表です。</p>
 <table>
 	<tr>
