--- a/documents/css-postprocessor-era.html
+++ b/documents/css-postprocessor-era.html
@@ -11,6 +11,8 @@
   <body>
     <h1>CSSポストプロセッサー時代の到来</h1>
 
+    <p>Published: 2013-12-04</p>
+
     <div class="image banner">
       <img src="/images/documents/css-postprocessor-era.svg" alt="Write with Sass, Compile to Standard CSS, Review, Optimize with Grunt, and Publish">
     </div>
