--- a/documents/css2pt.html
+++ b/documents/css2pt.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <h1>CSS2 property table</h1>
+    <p>Published on: 2004-03-04</p>
+
 <table>
 <tr>
 	<th colspan="3">Box model</th>
