--- a/documents/cutting-down-on-vendor-prefixes.html
+++ b/documents/cutting-down-on-vendor-prefixes.html
@@ -13,6 +13,8 @@
 
 <p>Translation of: <a href="http://www.456bereastreet.com/archive/201311/cutting_down_on_vendor_prefixes/">Cutting down on vendor prefixes</a></p>
 
+    <p>Published on: 2013-11-22</p>
+
 <p>とあるブラウザーで特定の機能を有効化する場合、現在、多くのウェブ開発者たちはCSSで<a href="http://www.w3.org/TR/CSS2/syndata.html#vendor-keywords">ベンダー拡張プリフィックス</a>を使っていることでしょう。そのこと自体は良いのですが、サンプル・コードやプリフィックスを追加するツールで、時々サポートし過ぎでやたらめったら全てのプリフィックス(今まで実装されたことがないようなものまで)を追加しようとしているのを見かけます。最早ベンダー拡張プリフィックスが不要なCSSプロパティーは数多くあると思いますし、そうでないとしてもその数は減らすことができるでしょう。</p>
 
 <p>以下の例ではどのプレフィックスを、使用しているのなら、使用しているかの注釈をつけておきました。だいたいが削除でき1行で済ませられるにも関わらず、様々なベンダー拡張プリフィックスと共に使われてしまっていることが多いCSSプロパティーだけに留めています。</p>
