--- a/documents/diveintohtml5-semantics.html
+++ b/documents/diveintohtml5-semantics.html
@@ -20,6 +20,8 @@
 
 <p>Translation of: <a href="http://diveintohtml5.info/semantics.html">What Does It All Mean?</a> - <a href="http://diveintohtml5.info/">Dive Into HTML5</a></p>
 
+    <p>Published on: 2011-02-04</p>
+
 <ol>
   <li><a href="#divingin">Diving In</a></li>
   <li><a href="#the-doctype">The Doctype</a></li>
