--- a/documents/entities.html
+++ b/documents/entities.html
@@ -15,6 +15,8 @@
 <body>
 <h1>Character entity references in HTML 4</h1>
 
+    <p>Published on: 2004-03-04</p>
+
 <p>HTML 4で定義されている文字実体参照と数値実体参照の一覧の表です。</p>
 
 <h2>ISO 8859-1 Characters</h2>
