--- a/documents/favicon-cheat-sheet-ja.html
+++ b/documents/favicon-cheat-sheet-ja.html
@@ -11,6 +11,8 @@
   <body>
 <h1>ファビコン・カンニング・ペーパー</h1>
 <p>Translation of: <a href="https://github.com/audreyr/favicon-cheat-sheet">favicon-cheat-sheet</a></p>
+    <p>Published on: 2013-09-11</p>
+
 <p>ファビコンのサイズや形式についての読むと頭が痛くなる偏執的なカンニング・ペーパーです。以下のURLを参考にしました:</p>
 <ul>
 <li><a href="http://mathiasbynens.be/notes/rel-shortcut-icon">rel=&quot;shortcut icon&quot; considered harmful · Mathias Bynens</a> &lt;-- special thanks <a href="https://github.com/mathiasbynens">@mathiasbynens</a></li>
