--- a/documents/git-cheat-sheets-jp.html
+++ b/documents/git-cheat-sheets-jp.html
@@ -9,6 +9,8 @@
 <body>
 <h1><a href="http://git-scm.com/">Git</a> Cheat Sheets JP</h1>
 
+    <p>Published on: 2009-06-19</p>
+
 <ol>
 <li><a href="#config">設定</a></li>
 <li><a href="#basic">基本</a></li>
