--- a/documents/html-img-alt.html
+++ b/documents/html-img-alt.html
@@ -18,6 +18,8 @@
   <body>
 <h1>HTMLにおける<code>img</code>要素の<code>alt</code>属性</h1>
 
+    <p>Published on: 2013-06-23</p>
+
 <p><a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/">HTML Standard</a>の<a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/embedded-content-1.html#alt">4.8.1.1 Requirements for providing text to act as an alternative for images</a>をざっと把握できるように日本語で箇条書きにしただけのものです。最終的には原文をしっかりと読むべきでしょう。</p>
 
 <ol>
