--- a/documents/opml_spec.html
+++ b/documents/opml_spec.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <h1>OPML 1.0 Specificationの勝手な日本語訳</h1>
+    <p>Published on: 2004-07-01</p>
+
 <p>8/31/03 DW(original: 9/15/00 DW)</p>
 <h2>前書き</h2>
 <p>この文書は<a href="http://www.opml.org/spec">OPML 1.0 Specification</a>の勝手な日本語訳です。本文中の誤りはすべて勝手に日本語訳をしたKyo Nagashimaに責任がありそうです。かなり私的な解釈が混ざっている訳ですので、正確な情報を得たい方は<a href="http://www.opml.org/spec">原文</a>を読んでください。</p>
