--- a/documents/rss-tutorial.html
+++ b/documents/rss-tutorial.html
@@ -9,6 +9,8 @@
 <body>
 <h1>RSS Tutorial</h1>
 
+    <p>Published on: 2005-07-23</p>
+
 <p>for Content Publishers and Webmasters</p>
 
 <div class="note">
