--- a/documents/sass-tutorial.html
+++ b/documents/sass-tutorial.html
@@ -35,6 +35,7 @@
 
     <p>Translation of: <a href="http://sass-lang.com/tutorial.html">Sass - Tutorial</a></p>
 
+    <p>Published on: 2011-02-20</p>
 
     <h2 id='install_ruby_and_sass'>Ruby と Sass のインストール</h2>
 
