--- a/documents/style-repository.html
+++ b/documents/style-repository.html
@@ -13,6 +13,8 @@
 
 <p>Re: <a href="http://daneden.me/max-css/">Max CSS</a> (An open letter to web designers and developers from <a href="https://twitter.com/_dte">@_dte</a>)</p>
 
+    <p>Published on: 2012-09-19</p>
+
 <p>10年以上HTMLやCSSを書いてきた中で他の人達の書いたHTMLやCSS、そしてJavaScriptから私が学んだものは少なくありません。というより全てをそれから学んだと言っても良いでしょう。Max CSSに書かれている意見には大いに賛成することができますし、ホワイトスペースとコメントを取り除いて圧縮されたCSSから得られるものがほとんどないことにも同意できます。</p>
 
 <p>しかし、今私達に必要なのは圧縮されていないCSSのコード<em>だけ</em>なのでしょうか？私はそうは思いません。「このWebサイトのこのデザインはどう実現してるんだろう？」という疑問に対する答えは確かにCSSコードを見ればわかりますが、そのデザインに隠された制作者の意図やその歴史を知ることはできません。CSSコードは「どういう機能を持つものなのか」についてのみ語り、「どうしてこうしたのか」については解説していません。コメントで追加される情報にも限界があるでしょう。</p>
