--- a/documents/translation-is-easy-really.html
+++ b/documents/translation-is-easy-really.html
@@ -12,6 +12,8 @@
 
 <p>Translation of: <a href="https://medium.com/education-today/510964531b56">Translation is easy, really</a></p>
 
+    <p>Published on: 2013-06-27</p>
+
 <p>僕が最初に就職したのは大体7ヶ月前で、<a href="http://www.t3.co.id/">T3</a>と<a href="http://www.pcgamer.co.id/">PC Gamer Indonesia</a>で記者として働き始めた。主な仕事はT3 UK Magazineの記事の翻訳だったけど、たまに今やってるゲームのこととかイベントの取材などの自分の記事も書かせてもらっている。</p>
 
 <p>英語教育を専攻してたから自分が翻訳がうまいと言っては言い過ぎになる。なぜなら英語の言語学と文学の両方を勉強していたけれど、翻訳に特化した学科をとっていたというわけじゃないからだ。きちんとした文章の翻訳の仕方なんてのも知らない。だから就職試験では雇われるかどうか少し不安だった。</p>
