--- a/documents/version-control-for-designers.html
+++ b/documents/version-control-for-designers.html
@@ -7,11 +7,13 @@
 <link rel="stylesheet" type="text/css" href="/styles/documents.min.css">
 </head>
 <body>
+<h1>Version Control for Designers</h1>
+
 <div class="note">
 <p><em>このドキュメントは <a href="http://hoth.entp.com/output/git_for_designers.html">Version Control for Designers</a> の日本語訳であり、元のドキュメントと同じくソースコード管理に予備知識がまったくない人を想定している</em></p>
 </div>
 
-<h1>Version Control for Designers</h1>
+    <p>Published on: 2009-06-23</p>
 
 <ol>
 <li><a href="#intro">はじめに</a></li>
