--- a/documents/web-typography-best-practices.html
+++ b/documents/web-typography-best-practices.html
@@ -13,6 +13,8 @@
 
 <p>Translation of: <a href="http://bootstrapbay.com/blog/web-typography-best-practices/">The All-Inclusive Guide to Web Typography Best Practices</a></p>
 
+    <p>Published on: 2014-09-29</p>
+
 <p>インターネットを見渡してみると、如何にタイポグラフィーがウェブ・デザインにおいて絶対的な支配力を持っているかに気付くことでしょう。とにかく<a href="http://ia.net/blog/the-web-is-all-about-typography-period/">ウェブ・デザインの95%はタイポグラフィーだ</a>というわけです。このようなことを考える時は、様々なことを考慮しなくてはいけません。インターネットとはコンテンツであり、コンテンツとは文字そして文章です。すなわちタイポグラフィーを意味するわけです。</p>
 
 <p>懸命なウェブ・デザイナーなら誰しもこのことは知っており、注意深くまた慎重に時間を費やし、作成中のウェブサイトでタイポグラフィーがきちんとなるようにしていることでしょう。その中では読者に機能的で魅力的であるようなタイポグラフィーを提供するため、ウェブサイトの情報アーキテクチャーを設計する際に様々な要素を考慮することになります。どのようなフォントが最も読みやすいのだろうか？またどのようなフォントの方が流し読みしやすいだろうか？見やすさについてはどうか？</p>
