--- a/documents/css2bsi.html
+++ b/documents/css2bsi.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <h1>CSS 2 browser support information</h1>
+    <p>Published on: 2004-04-26</p>
+
 <p>各ブラウザのCSS 2.0で定義されているプロパティなどのサポート状況の表です。</p>
 <h2>略称の意味</h2>
 <ul>
