--- a/documents/opjsdom.html
+++ b/documents/opjsdom.html
@@ -36,6 +36,8 @@ li.quirk {
 </head>
 <body>
 <h1>Support for JavaScript and JScript Objects in Opera</h1>
+    <p>Published on: 2004-04-26</p>
+
 <p>OperaはECMAScript第二版と第三版を完全にサポートしており、DOMレベル2も完全にサポートする予定です(独立したDOMに関する文書も将来出す予定です)。</p>
 <p>現在、試験的にOperaは一部の例外を除き、JScriptのサブセットはもちろんJavaScript 1.4もサポートしています。OperaはUser AgentをMicrosoft Internet Explorerと設定した場合のみJScriptのプロパティをサポートします。これはFile &gt; Preferences &gt; Connections &gt; Browser identificationから&quot;Identify as MSIE 5.0&quot;とすることによって設定できます。</p>
 <h2>Legend</h2>
