--- a/documents/ps_sketchpbyp.html
+++ b/documents/ps_sketchpbyp.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <h1>Sketch photo by pencil in Photoshop 7</h1>
+    <p>Published on: 2004-03-04</p>
+
 <p>1. 適当な写真を開く</p>
 <p class="image"><img src="/images/documents/ps_sketchpbyp01.png" alt="開く" width="376" height="303"></p>
 <hr>
