--- a/documents/sass-and-sassy-css.html
+++ b/documents/sass-and-sassy-css.html
@@ -9,6 +9,8 @@
   <body>
 <h1>Sass、そしてSassy CSS (SCSS)</h1>
 
+    <p>Published on: 2011-02-13</p>
+
 <p>CSSを拡張したメタ言語である<a href="http://sass-lang.com/">Sass</a>、そしてその別文法として定義されたSCSSについて、960.gsなどのCSSフレームワークと絡めて、Sass(主にSCSS)の良さを解説する。</p>
 
 <ul>
