--- a/documents/sass-guide-ja.html
+++ b/documents/sass-guide-ja.html
@@ -13,6 +13,8 @@
 
     <p>Translation of <a href="http://sass-lang.com/guide">Sass: Sass Basics</a></p>
 
+    <p>Published on: 2014-02-08</p>
+
     <p>Sassを使えるようにするには、まずあなたのプロジェクトにSassをセットアップする必要があります。もし単にこの文書を読みに来ただけなら、そのまま読み進めてください。しかしながらまずSassをインストールすることを薦めます。<a href="http://sass-lang.com/install">インストール手順の解説</a>を読めば、セットアップに必要なことは全て知ることができるでしょう。</p>
 
     <ul>
