--- a/documents/what-should-you-say-when-your-app-goes-down.html
+++ b/documents/what-should-you-say-when-your-app-goes-down.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="/styles/documents.min.css">
   </head>
   <body>
-    <header>
-      <h1>あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？</h1>
+    <h1>あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？</h1>
 
-      <p>Translation of: <a href="http://davidmckinney.com/blog/2013/8/26/what-should-you-say-when-your-app-goes-down">What should you tell your users when your service is down?</a> by <a href="http://davidmckinney.com/">David McKenney</a></p>
-    </header>
+    <p>Translation of: <a href="http://davidmckinney.com/blog/2013/8/26/what-should-you-say-when-your-app-goes-down">What should you tell your users when your service is down?</a> by <a href="http://davidmckinney.com/">David McKenney</a></p>
+
+    <p>Published on: 2013-08-31</p>
 
 <p>つい最近、私達は多くの有名なサービスが完全に停止するという状況に遭遇しました。この出来事は、こういった何か不具合が起きた時にユーザーとどうコミュニケーションをとるかについて学ぶ良い機会なのではないかと思います。あの時InstagramとAirbnb、IFTTT、Vineがユーザーに送った通知は以下のようなものでした:</p>
 
