--- a/pub/test/603.html
+++ b/pub/test/603.html
@@ -27,7 +27,7 @@
 
       <p><a href="#test">Enable #test:target</a></p>
 
-      <p><button id="disable">Disbale #test:target by history.pushState()</button></p>
+      <p><button id="disable">Disbale #test:target by history.replaceState()</button></p>
 
       <p>Chrome 39、Internet Explorer 11、Firefox 34、Chrome 41とFirefox 36では動的に変更されない。</p>
     </section>
