--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
               <figure><img alt="ピンク色の卵をかけたご飯" src="/images/blog/tkg-tarako-20141217.jpg"></figure>
 
-              <p>ピンク色とは生のたらこ。ご飯にかける時は辛子明太子よりも普通のやつが好き。丸のままでなくても良いので、おいしいけど切り落としになってて、量の割には安価なものを買ってる。余ったらスパゲッティーの具にしよう！</p>
+              <p>ピンク色とは生のたらこ。ご飯にかける時は辛子明太子よりも普通のやつが好き。丸のままでなくても良いので、おいしいけど切り落としになってて、量の割には安価なものを買ってる。余ったらスパゲッティーの具にしよう！TKG Advent Calendar 2014も17日目か。</p>
             </a>
         </section>
 
