--- a/pub/test/604.html
+++ b/pub/test/604.html
@@ -21,13 +21,13 @@
     </header>
 
     <section class="test">
-      <p><button id="getScrollBarWidth">スクロールバーの幅を表示</button></p>
+      <p><button id="getScrollbarWidth">スクロールバーの幅を表示</button></p>
 
       <p>OS XやChromeなどでオーバレイ・スクロールバーが有効の場合は<code>0px</code>、それ以外ではスクロールバーの幅がダイアログで表示される。</p>
     </section>
 
     <script>
-      document.getElementById('getScrollBarWidth').addEventListener('click', function () {
+      document.getElementById('getScrollbarWidth').addEventListener('click', function () {
         var w = undefined;
         var tester = document.createElement('div');
         tester.style.bottom = '100%';
