Don't include licence information to `address`

--- a/documents/about-rss.html
+++ b/documents/about-rss.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>RSSについて</h1>
-    <p>Published: 2003-11-23</p>
+    <p>Published on 2003-11-23 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
 
 <div class="note">
@@ -209,7 +209,7 @@ exit;</code>
 <hr>
 
 <address>
-  <p>Written by <a href="https://kyonagashima.com/">Kyo Nagashima</a> under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
+  <p>Written by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
 </address>
 
 <div class="adsense">
