--- a/documents/cairs.html
+++ b/documents/cairs.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Complex @import rules</h1>
-    <p>Published on: 2004-02-27</p>
+    <p>Published on 2004-02-27 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
 <p>各ブラウザでサポート状況がマチマチな@importルールのサポート状況の表です。</p>
 <table>
@@ -117,7 +117,7 @@
 <hr>
 
 <address>
-  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a> under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
+  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
 </address>
 
 <div class="adsense">
