--- a/documents/entities.html
+++ b/documents/entities.html
@@ -15,7 +15,7 @@
 <body>
 <h1>Character entity references in HTML 4</h1>
 
-    <p>Published on: 2004-03-04</p>
+    <p>Published on 2004-03-04 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
 <p>HTML 4で定義されている文字実体参照と数値実体参照の一覧の表です。</p>
 
@@ -1860,7 +1860,7 @@
 <hr>
 
 <address>
-  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a> under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
+  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
 </address>
 
 <div class="adsense">
