--- a/documents/ps_sketchpbyp.html
+++ b/documents/ps_sketchpbyp.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Sketch photo by pencil in Photoshop 7</h1>
-    <p>Published on: 2004-03-04</p>
+    <p>Published on 2004-03-04 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
 <p>1. 適当な写真を開く</p>
 <p class="image"><img src="/images/documents/ps_sketchpbyp01.png" alt="開く" width="376" height="303"></p>
@@ -33,7 +33,7 @@
 <hr>
 
 <address>
-  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a> under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
+  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
 </address>
 
 <div class="adsense">
