--- a/documents/style-repository.html
+++ b/documents/style-repository.html
@@ -13,7 +13,7 @@
 
 <p>Re: <a href="http://daneden.me/max-css/">Max CSS</a> (An open letter to web designers and developers from <a href="https://twitter.com/_dte">@_dte</a>)</p>
 
-    <p>Published on: 2012-09-19</p>
+    <p>Published on 2012-09-19 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
 <p>10年以上HTMLやCSSを書いてきた中で他の人達の書いたHTMLやCSS、そしてJavaScriptから私が学んだものは少なくありません。というより全てをそれから学んだと言っても良いでしょう。Max CSSに書かれている意見には大いに賛成することができますし、ホワイトスペースとコメントを取り除いて圧縮されたCSSから得られるものがほとんどないことにも同意できます。</p>
 
@@ -26,7 +26,7 @@
 <p>Thank you.</p>
 
 <address>
-  <p>— <a href="https://kyonagashima.com/">Kyo Nagashima</a> (<a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>)</p>
+  <p>— <a href="https://kyonagashima.com/">Kyo Nagashima</a></p>
 </address>
 
 <div class="adsense">
