--- a/documents/216colors.html
+++ b/documents/216colors.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>216 Cross Platform Colors</h1>
-    <p>Published on: 2004-03-04</p>
+    <p>Published on 2004-03-04 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
 <p>いわゆるWebセーフカラーと呼ばれる色の表です。</p>
 <table>
@@ -305,7 +305,7 @@
 <hr>
 
 <address>
-  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a> under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
+  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
 </address>
 
 <div class="adsense">
