--- a/documents/css2bsi.html
+++ b/documents/css2bsi.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>CSS 2 browser support information</h1>
-    <p>Published on: 2004-04-26</p>
+    <p>Published on 2004-04-26 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
 <p>各ブラウザのCSS 2.0で定義されているプロパティなどのサポート状況の表です。</p>
 <h2>略称の意味</h2>
@@ -1376,7 +1376,7 @@
 <hr>
 
 <address>
-  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a> under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
+  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
 </address>
 
 <div class="adsense">
