--- a/documents/css2pt.html
+++ b/documents/css2pt.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>CSS2 property table</h1>
-    <p>Published on: 2004-03-04</p>
+    <p>Published on 2004-03-04 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
 <table>
 <tr>
@@ -451,7 +451,7 @@
 <hr>
 
 <address>
-  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a> under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
+  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
 </address>
 
 <div class="adsense">
