--- a/documents/httpstatus.html
+++ b/documents/httpstatus.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>HTTP status messages</h1>
-    <p>Published on: 2004-04-26</p>
+    <p>Published on 2004-04-26 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
 <p>サーバーから返されるHTTPステータス番号のリストです。</p>
 <h2>1xx: Information</h2>
@@ -112,7 +112,7 @@
 <hr>
 
 <address>
-  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a> under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
+  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
 </address>
 
 <div class="adsense">
