--- a/documents/ps_lightning.html
+++ b/documents/ps_lightning.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Draw lightning in Photoshop 7</h1>
-    <p>Published on: 2004-03-04</p>
+    <p>Published on 2004-03-04 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
 <p>1. 適当な大きさ(ここでは384*256でやってます)で新規画像を作成</p>
 <p class="image"><img src="/images/documents/ps_lightning01.png" alt="新規" width="392" height="283"></p>
@@ -36,7 +36,7 @@
 <hr>
 
 <address>
-  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a> under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
+  <p>Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
 </address>
 
 <div class="adsense">
