--- a/documents/sass-and-sassy-css.html
+++ b/documents/sass-and-sassy-css.html
@@ -9,7 +9,7 @@
   <body>
 <h1>Sass、そしてSassy CSS (SCSS)</h1>
 
-    <p>Published on: 2011-02-13</p>
+    <p>Published on 2011-02-13 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
 <p>CSSを拡張したメタ言語である<a href="http://sass-lang.com/">Sass</a>、そしてその別文法として定義されたSCSSについて、960.gsなどのCSSフレームワークと絡めて、Sass(主にSCSS)の良さを解説する。</p>
 
@@ -463,7 +463,7 @@ button {
 <hr>
 
 <address>
-  <p>Written by <a href="https://kyonagashima.com/">Kyo Nagashima</a> under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>.</p>
+  <p>Written by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
 </address>
 
 <div class="adsense">
