--- a/documents/markup.html
+++ b/documents/markup.html
@@ -29,7 +29,7 @@
       <li><a href="#%E3%83%9E%E3%83%BC%E3%82%AF%E3%82%A2%E3%83%83%E3%83%97%E3%81%99%E3%82%8B%E3%81%A8%E3%81%84%E3%81%86%E3%81%93%E3%81%A8">マークアップするということ</a></li>
     </ul>
 
-    <h2 id="html5%E3%81%A7%E3%81%AE%E5%A4%89%E5%8C%96">HTML5での変化</h2>
+    <h2 id="html5での変化">HTML5での変化</h2>
 
     <p>コンテンツに則した素直な形でマークアップできること。</p>
 
@@ -43,7 +43,7 @@
 
     <p>これら豊富な例示をよく見ることがマークアップするための第一歩と言って良い。</p>
 
-    <h2 id="%E8%91%97%E4%BD%9C%E6%A8%A9%E8%A1%A8%E7%A4%BA%E3%81%AE%E3%83%9E%E3%83%BC%E3%82%AF%E3%82%A2%E3%83%83%E3%83%97">著作権表示のマークアップ</h2>
+    <h2 id="著作権表示のマークアップ">著作権表示のマークアップ</h2>
 
     <p>例えば著作権情報の表示をマークアップすることを考えてみよう。ウェブサイトによくあるCopyright云々というあれだ。日本では特に必要とされることはないが、色々入り混じる部分なのでこれを取り上げる。典型的な文言は以下のようなものだろう。</p>
 
@@ -69,7 +69,7 @@
 
     <p>仕様及びその例示からすると、まずはこれが適切なマークアップと考えられる。</p>
 
-    <h3 id="small%E8%A6%81%E7%B4%A0">small要素</h3>
+    <h3 id="small要素">small要素</h3>
 
     <p><a href="http://www.w3.org/TR/html401/present/graphics.html#edef-SMALL">HTML 4.01では<code>small</code>要素は単に小さい文字で表示するための要素</a>であったが、<a href="http://www.w3.org/TR/html5/text-level-semantics.html#the-small-element">HTML5では小さく書かれることが多い補足的な文字列(small print)を表す要素</a>と改められた。典型的な使われ方は以下のようなものだ。</p>
 
@@ -79,7 +79,7 @@
 
     <p>主となるコンテンツであるところの<em>安売りの値段</em>があった上で、その補足的な文であるところの<em>購入数の制限</em>を<code>small</code>要素でマークアップすることになる。仕様では<code>small</code>要素は他に注意書きや法に基づく表示義務に加え、著作権表示にも使うことが出来るとされている。既に挙げた著作権表示のマークアップは、<code>small</code>要素の観点からも適切だと言えるだろう。</p>
 
-    <h3 id="footer%E8%A6%81%E7%B4%A0%E3%81%A8small%E8%A6%81%E7%B4%A0">footer要素とsmall要素</h3>
+    <h3 id="footer要素とsmall要素">footer要素とsmall要素</h3>
 
     <p><code>footer</code>要素には多くの場合、著作権表示以外にも様々な情報が格納される。制作者の連絡先であったり、文書の公開日時であったりだ。<code>footer</code>要素そのものにより、その中身が配置されたセクションの様々な情報であることを表すことができる。要素の用途としては<code>small</code>要素と似ているところがあると言って良いだろう。</p>
 
@@ -94,7 +94,7 @@
 
     <p>併用するのはいかにも冗長であるから、と言うことではなく、<em><code>small</code>要素足る条件を満たしていない</em>と考えられるから、だ。</p>
 
-    <h3 id="p%E8%A6%81%E7%B4%A0%E3%81%A8div%E8%A6%81%E7%B4%A0">p要素とdiv要素</h3>
+    <h3 id="p要素とdiv要素">p要素とdiv要素</h3>
 
     <p>さて、このような著作権表示の場合、<code>p</code>要素を使って段落とする必要があるのかという疑問があるだろう。なんとか文ではあるが、段落と呼べるようなものではないので、汎用要素である<code>div</code>要素の方が適切と考えても不思議ではない。この辺りのことは日本語における意味段落と形式段落の違いや、英語におけるparagraphとの違いも相まって、古くから議論の尽きない問題だった。<q><a href="https://twitter.com/_tsmd/status/547979202494869504">字下げして違和感があるかどうか</a></q>という考え方は妥当な結論だったように思う。</p>
 
@@ -102,7 +102,7 @@
 
     <p>すなわち<code>p</code>要素が<a href="http://www.w3.org/TR/html5/dom.html#phrasing-content-1">子に持てる要素達(phrasing content)</a>をまとめるための汎用的な要素として機能するようになったので、<code>div</code>要素は<code>p</code>要素が子に持てないような要素を含めてひとまとめにしたい時に使うものとなった、とも考えられる。つまり著作権表示において、<code>div</code>要素を使うことは間違いではないが、<code>p</code>要素の方が適切であることは疑いないと言って良いだろう。</p>
 
-    <h3 id="footer%E8%A6%81%E7%B4%A0%E3%81%A8p%E8%A6%81%E7%B4%A0">footer要素とp要素</h3>
+    <h3 id="footer要素とp要素">footer要素とp要素</h3>
 
     <p>それでは<code>footer</code>要素に著作権表示のみならば<code>p</code>要素は必要なのだろうか。まとめる必要性はかなり薄いと考えられる上、paragraphの定義において、わざわざマークアップせずとも暗黙にparagraphとみなされるであろうことが触れられている。つまり特に必要のない<code>p</code>要素で、これは単に冗長なマークアップと言えるだろう。</p>
 
@@ -111,7 +111,7 @@
 
     <p><code>footer</code>要素に著作権表示のみならば、こうマークアップするのが最も適切であると結論できる。</p>
 
-    <h3 id="%E3%82%B9%E3%82%BF%E3%82%A4%E3%83%AA%E3%83%B3%E3%82%B0%E3%81%A8%E3%81%AE%E5%85%BC%E3%81%AD%E5%90%88%E3%81%84">スタイリングとの兼ね合い</h3>
+    <h3 id="スタイリングとの兼ね合い">スタイリングとの兼ね合い</h3>
 
     <p>だが僕たちはCSSで文書の体裁を整える必要がある。その場合に<code>footer</code>要素直下に直接文字列がくるのはなんとも都合が悪い。ともすると<code>small</code>要素が著作権情報の表示に使えると仕様で触れられていることを意識して、こうマークアップしてしまうかもしれない。</p>
 
@@ -133,7 +133,7 @@
 
     <p>マークアップの適切さにおいては一歩譲るが、これはこれで適切さと保守性、拡張性のバランスがとれた良いマークアップと言える。スタイリングへの意識を欠かすことはできない現在においてはより実践的である、とも言えるだろう。</p>
 
-    <h2 id="%E3%83%9E%E3%83%BC%E3%82%AF%E3%82%A2%E3%83%83%E3%83%97%E3%81%99%E3%82%8B%E3%81%A8%E3%81%84%E3%81%86%E3%81%93%E3%81%A8">マークアップするということ</h2>
+    <h2 id="マークアップするということ">マークアップするということ</h2>
 
     <p>ここまで著作権表示を例にして適切なマークアップの模索について書いてきた。</p>
 
