--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   · <span class="tag">Web Design</span></p>
               </footer>
 
-              <figure><img src="/images/blog/dynamic-subsetting-and-dynamic-contens.png" alt="同じページで使われていない文字だけ他のフォントで表示されている"></figure>
+              <figure><img alt="同じページで使われていない文字だけ他のフォントで表示されている" height="360" src="/images/blog/dynamic-subsetting-and-dynamic-contens.png" width="640"></figure>
 
               <p>日本語を含むウェブ・フォントを使う場合、その転送量の多さとライセンスの問題により、動的にサブセット化されることがある。手段として間違ってはいないが、利用する側はそれなりに気をつける必要がある。それは動的に追加されるコンテンツに対しては指定しない、ということだ。</p>
             </a>
