--- a/404.html
+++ b/404.html
@@ -8,8 +8,8 @@
 
     <style>
       body {
-        background-color: #FCF9F0;
-        color: #3C3330;
+        background-color: #fcf9f0;
+        color: #3c3330;
         font-family: "Helvetica Neue", "Calibri", sans-serif;
         line-height: 1.618;
         margin: 10% auto;
@@ -18,10 +18,10 @@
       }
 
       .logo {
+        display: block;
         line-height: 1;
-        height: 1em;
-        margin: 0;
-        width: 1em;
+        height: 2em;
+        width: 2em;
       }
 
       .logo img {
@@ -83,29 +83,19 @@
     </style>
   </head>
   <body>
-    <div class="header">
-      <h1 class="logo"><a href="/"><img alt="Hail2u.net" src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20fill%3D%22%235bacd0%22%20d%3D%22M-8-8h528v528H-8z%22%2F%3E%3Cpath%20d%3D%22M160%20128v256h16V128zm32%200v256h16V128zm112%200v96h-80v16h96V128zm32%200v256h16V128zM224%20256v16h80v112h16V256z%22%20fill%3D%22%23fcf9f0%22%2F%3E%3C%2Fsvg%3E"></a></h1>
-    </div>
+    <a class="logo" href="/"><img alt="Hail2u.net" src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20fill%3D%22%235bacd0%22%20d%3D%22M-8-8h528v528H-8z%22%2F%3E%3Cpath%20d%3D%22M160%20128v256h16V128zm32%200v256h16V128zm112%200v96h-80v16h96V128zm32%200v256h16V128zM224%20256v16h80v112h16V256z%22%20fill%3D%22%23fcf9f0%22%2F%3E%3C%2Fsvg%3E"></a>
 
-    <div class="main">
-      <div class="section">
-        <h1 class="title"><strong>404</strong>. Error. Probably.</h1>
+    <h1 class="title"><strong>404</strong>. Error. Probably.</h1>
 
-        <p class="description">お探しのページは見つかりませんでした。以下の検索フォームより、このウェブサイト内を検索してみてください。</p>
-      </div>
+    <p class="description">お探しのページは見つかりませんでした。以下の検索フォームより、このウェブサイト内を検索してみてください。</p>
 
-      <div class="section">
-        <form class="searchbox" action="http://www.google.com/cse">
-          <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
-          <input type="hidden" name="ie" value="UTF-8">
-          <input class="input" name="q" size="32" type="search">
-          <input class="button" name="sa" type="submit" value="検索">
-        </form>
-      </div>
-    </div>
+    <form class="searchbox" action="http://www.google.com/cse">
+      <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
+      <input type="hidden" name="ie" value="UTF-8">
+      <input class="input" name="q" size="32" type="search">
+      <input class="button" name="sa" type="submit" value="検索">
+    </form>
 
-    <div class="footer">
-      <p class="byline">Made by <a href="/about/">Kyo Nagashima</a>.</p>
-    </div>
+    <p class="byline">Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
   </body>
 </html>
