--- a/pub/test/608.html
+++ b/pub/test/608.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
 
-    <title>position: absolute in Mobile Safari</title>
+    <title>position: absolute in Chrome 40</title>
 
     <link href="http://hail2u.net/styles/natural.min.css" rel="stylesheet">
     <style>
@@ -42,11 +42,13 @@ left: 0; }
   </head>
   <body>
     <header>
-      <h1>position: absolute in Mobile Safari</h1>
+      <h1>position: absolute in Chrome 40</h1>
+
+      <p>Chrome 40で<code>left</code>の初期値である<code>auto</code>の解釈が置換要素と非置換要素で同じになっている。</p>
     </header>
 
     <section class="test">
-      <h1><code>left</code>なし</h1>
+      <h1><code>left</code>無指定</h1>
 
       <form class="searchbox" action="https://www.google.com/cse">
         <input name="cx" type="hidden" value="partner-pub-8712792805045949:3747342316">
@@ -57,7 +59,7 @@ left: 0; }
     </section>
 
     <section class="test with-left">
-      <h1><code>left</code>あり</h1>
+      <h1><code>left: 0</code></h1>
 
       <form class="searchbox" action="https://www.google.com/cse">
         <input name="cx" type="hidden" value="partner-pub-8712792805045949:3747342316">
