--- a/pub/test/609.html
+++ b/pub/test/609.html
@@ -8,6 +8,10 @@
 
     <link href="http://hail2u.net/styles/natural.min.css" rel="stylesheet">
     <style>
+      .test {
+        height: 100em;
+      }
+
       .searchbox {
         background-color: rgba(0, 0, 0, 0.8);
         color: #fff;
