--- a/pub/test/609.html
+++ b/pub/test/609.html
@@ -32,9 +32,9 @@
         display: block;
         font-size: 8vmin;
         height: 8vmin;
+        left: 1vmin;
         overflow: hidden;
         position: absolute;
-        right: 1vmin;
         text-align: center;
         text-decoration: none;
         top: 1vmin;
