--- a/pub/test/609.html
+++ b/pub/test/609.html
@@ -59,6 +59,7 @@
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         color: inherit;
+        font-size: 7vmin;
         left: 10vw;
         line-height: 1.25;
         margin-top: -0.675em;
@@ -74,30 +75,6 @@
 
       #search:target {
         display: block;
-      }
-
-      @media (min-width: 24rem) {
-        .searchbox {
-          font-size: 150%;
-        }
-      }
-
-      @media (min-width: 48rem) {
-        .searchbox {
-          font-size: 300%;
-        }
-      }
-
-      @media (min-width: 72rem) {
-        .searchbox {
-          font-size: 450%;
-        }
-      }
-
-      @media (min-width: 96rem) {
-        .searchbox {
-          font-size: 600%;
-        }
       }
     </style>
   </head>
