--- a/pub/test/612.html
+++ b/pub/test/612.html
@@ -60,9 +60,7 @@
 
       <ul>
         <li><code>document.querySelectorAll()</code>のサポート</li>
-        <li>属性セレクター及び<code>^=</code>のサポート</li>
         <li><code>Function.prototype.bind()</code>のサポート</li>
-        <li><code>HTMLElement.dataset</code>のサポート</li>
         <li><code>vw</code>と<code>vh</code>単位のサポート</li>
         <li>2D Transformのサポート</li>
       </ul>
@@ -87,8 +85,9 @@
               evt.preventDefault();
 
               if (this.style.cssText && image.style.cssText) {
-                if (image.dataset.src) {
-                  image.src = image.dataset.src;
+                if (image._src) {
+                  image.src = image._src;
+                  delete image._src;
                 }
 
                 this.style.cssText = '';
@@ -98,7 +97,7 @@
               }
 
               if (this.href !== image.src) {
-                image.dataset.src = image.src;
+                image._src = image.src;
                 image.src = this.href;
               }
 
