--- a/pub/test/612.html
+++ b/pub/test/612.html
@@ -19,7 +19,7 @@
       <h1>Landscape Image</h1>
 
       <figure>
-        <a href="http://placeimg.com/480/270/any"><img src="http://placeimg.com/480/270/any"></a>
+        <a href="http://placeimg.com/480/270/any"><img height="270" src="http://placeimg.com/480/270/any" width="480"></a>
       </figure>
     </section>
 
@@ -27,7 +27,7 @@
       <h1>Portrait Image</h1>
 
       <figure>
-        <a href="http://placeimg.com/360/640/any"><img src="http://placeimg.com/360/640/any"></a>
+        <a href="http://placeimg.com/360/640/any"><img height="640" src="http://placeimg.com/360/640/any" width="360"></a>
       </figure>
     </section>
 
@@ -35,7 +35,7 @@
       <h1>Large Landscape Image</h1>
 
       <figure>
-        <a href="http://placeimg.com/2560/1440/any"><img src="http://placeimg.com/2560/1440/any"></a>
+        <a href="http://placeimg.com/2560/1440/any"><img height="1440" src="http://placeimg.com/2560/1440/any" width="2560"></a>
       </figure>
     </section>
 
@@ -43,7 +43,7 @@
       <h1>Large Portrait Image</h1>
 
       <figure>
-        <a href="http://placeimg.com/1080/1920/any"><img src="http://placeimg.com/1080/1920/any"></a>
+        <a href="http://placeimg.com/1080/1920/any"><img height="1920" src="http://placeimg.com/1080/1920/any" width="1080"></a>
       </figure>
     </section>
 
@@ -51,7 +51,7 @@
       <h1>Link Different Image</h1>
 
       <figure>
-        <a href="http://placeimg.com/960/540/any"><img src="http://placeimg.com/160/90/any"></a>
+        <a href="http://placeimg.com/960/540/any"><img height="90" src="http://placeimg.com/160/90/any" width="160"></a>
       </figure>
     </section>
 
@@ -59,10 +59,10 @@
       <h1>動作環境</h1>
 
       <ul>
-        <li><code>document.querySelectorAll()</code>のサポート</li>
+        <li><code>Element.querySelectorAll()</code>のサポート</li>
+        <li>属性セレクター及び<code>^=</code>のサポート</li>
         <li><code>Function.prototype.bind()</code>のサポート</li>
         <li><code>vw</code>と<code>vh</code>単位のサポート</li>
-        <li>2D Transformのサポート</li>
       </ul>
     </section>
 
@@ -103,20 +103,21 @@
 
               this.style.backgroundColor = '#333';
               this.style.cursor = 'zoom-out';
-              this.style.height = '96vh';
+              this.style.height = '100vh';
               this.style.left = '0';
-              this.style.padding = '2vh 2vw';
               this.style.position = 'fixed';
               this.style.top = '0';
-              this.style.width = '96vw';
+              this.style.width = '100vw';
               this.style.zIndex = '1';
+              image.style.bottom = '0';
               image.style.height = 'auto';
-              image.style.left = '50%';
+              image.style.left = '0';
+              image.style.margin = 'auto';
               image.style.maxHeight = '96%';
               image.style.maxWidth = '96%';
               image.style.position = 'absolute';
-              image.style.top = '50%';
-              image.style.transform = 'translate(-50%, -50%)';
+              image.style.right = '0';
+              image.style.top = '0';
               image.style.width = 'auto';
             }.bind(parent, image), false);
           }
