--- a/pub/test/613.html
+++ b/pub/test/613.html
@@ -19,7 +19,7 @@
         background-image: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%221%22%20height%3D%221%22%3E%3Cpath%20d%3D%22M0%201l1-1v1z%22%2F%3E%3C%2Fsvg%3E');
       }
 
-      .par {
+      .par-none {
         background-image: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%221%22%20height%3D%221%22%20preserveAspectRatio%3D%22none%22%3E%3Cpath%20d%3D%22M0%201l1-1v1z%22%2F%3E%3C%2Fsvg%3E');
       }
     </style>
@@ -28,17 +28,17 @@
     <header>
       <h1>SVG Resizing and preserveAspectRatio Attribute</h1>
 
-      <p>SVG側で明示的に<code>preserveAspectRatio=&quot;none&quot;</code>しているか否かで、アスペクト比を無視した強制的なリサイズできるかどうかのテスト・ページ。</p>
+      <p>CSSで、背景に指定したSVG画像をその画像のアスペクト比を無視してリサイズできるかどうかのテスト・ページ。<a href="00%25">WebKit/Blinkにある古いバグ</a>のようだ。</p>
     </header>
 
     <section class="test no-par">
-      <h1>preserveAspectRatioなし</h1>
+      <h1>preserveAspectRatio属性なし</h1>
 
-      <p>Chrome 40 (42)ではリサイズできない。Firefox 35 (37)及びInternet Explorer 11ではできる。</p>
+      <p>Chrome 40 (42)及びMobile Safari 8.1ではリサイズできない。Firefox 35 (37)及びInternet Explorer 11ではできる。</p>
     </section>
 
-    <section class="test par">
-      <h1>preserveAspectRatioあり</h1>
+    <section class="test par-none">
+      <h1>preserveAspectRatio=&quot;none&quot;</h1>
     </section>
   </body>
 </html>
