--- a/pub/test/614.html
+++ b/pub/test/614.html
@@ -44,7 +44,7 @@
 
       <div class="border"></div>
 
-      <p>だいたいきれい。</p>
+      <p>Firefox 35では若干アンチエイリアスが甘い。他ではだいたいきれい。</p>
     </section>
 
     <section class="test">
@@ -52,7 +52,7 @@
 
       <div class="lg"></div>
 
-      <p>Chrome 40でぎざぎざになる。Internet Explorer 11でも若干アンチエイリアスが甘い。Firefox 35ではきれい。Mobile Safari 8.1ではRetinaだと気にならない程度にきれい。</p>
+      <p>Chrome 40でぎざぎざになる。Internet Explorer 11とFirefox 35で若干アンチエイリアスが甘い。Mobile Safari 8.1ではRetinaだと気にならない程度にきれい。</p>
     </section>
 
     <section class="test">
