--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
         <h1>購読</h1>
 
         <ul class="icon-list">
-          <li><a href="https://twitter.com/hail2unet"><img alt="Twitter" src="../../images/icon/twitter.min.svg"></a></li>
-          <li><a href="https://www.facebook.com/hail2u.net"><img alt="Facebook" src="../../images/icon/facebook.min.svg"></a></li>
-          <li><a href="http://u2liah.tumblr.com/"><img alt="Tumblr" src="../../images/icon/tumblr.min.svg"></a></li>
+          <li><a href="https://twitter.com/hail2unet" itemprop="sameAs"><img alt="Twitter" src="../../images/icon/twitter.min.svg"></a></li>
+          <li><a href="https://www.facebook.com/hail2u.net" itemprop="sameAs"><img alt="Facebook" src="../../images/icon/facebook.min.svg"></a></li>
+          <li><a href="http://u2liah.tumblr.com/" itemprop="sameAs"><img alt="Tumblr" src="../../images/icon/tumblr.min.svg"></a></li>
           <li><a href="/feed" rel="alternate" type="application/rss+xml"><img alt="Feed" src="../../images/icon/feed.min.svg"></a></li>
         </ul>
 
